--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,6 +7,12 @@
 }
 
 /* Global Styles */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 body {
   background-color: var(--background-color);
   color: var(--text-color);
